--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,7 +2,7 @@ name: metrics
 
 on:
   schedule:
-    - cron: '0 0/6 * * *'
+    - cron: '0 21 * * *'
   push:
     branches: [ master ]
   pull_request:
