--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -5,6 +5,7 @@ on:
     - cron: "0 */12 * * *"
   push:
     branches: [master]
+  workflow_dispatch:
 
 jobs:
   rss:
@@ -21,6 +22,6 @@ jobs:
           python rss/run.py
       - run: git config --global user.email "noreply@github.com"
       - run: git config --global user.name "[bot] rss"
-      - run: git diff > .diff
+      - run: git diff README.md > .diff
       - run: git add README.md
       - run: [ -s .diff ] && git commit -m 'update posts by rss' && git push || echo "No changes"
